tests/globals/valid/multiple_global.amu
s32 a = 3;
s32 b = 4;

s32 main() {
    return a * b;
}