tests/globals/invalid/fun_redefined_as_var.amu
s32 foo() {
    return 3;
}

foo:s32 = 4;

main() : s32 {
    return foo;
}